--- a/build.gradle
+++ b/build.gradle
@@ -28,11 +28,13 @@ jacocoTestReport{
 	afterEvaluate {
 		classDirectories.setFrom(files(classDirectories.files.collect {
 			fileTree(dir: it, exclude: [
-					"co/edu/unisabana/usuario/**/*model",
-					"co/edu/unisabana/usuario/dto",
-					"co/edu/unisabana/usuario/repository/dao",
-					"co/edu/unisabana/usuario/service/model",
-					"**/config/*"
+					"**/dto/**",
+					"**/model/*",
+					"**/entity/*",
+					"**/exception/*",
+					"co/edu/unisabana/usuario/UsuarioApplication.class",
+					"co/edu/unisabana/usuario/controller/UserController.class",
+					"co/edu/unisabana/usuario/repository/dao/UserDao.class",
 			])
 		}))
 	}
