--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.12.RELEASE'
 	id 'java'
 	id 'jacoco'
+	id('org.sonarqube') version '3.4.0.2513'
 }
 
 group = 'co.edu.unisabana'
@@ -18,6 +19,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.24'
 	annotationProcessor 'org.projectlombok:lombok:1.18.24'
 	runtimeOnly 'com.h2database:h2:2.1.214'
+	implementation('com.google.guava:guava:31.1-jre')
 
 	testCompileOnly 'org.projectlombok:lombok:1.18.24'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
@@ -37,6 +39,12 @@ jacocoTestReport{
 					"co/edu/unisabana/usuario/repository/dao/UserDao.class",
 			])
 		}))
+	}
+}
+
+sonarqube {
+	properties {
+		property("sonar.projectName", "example-rest-api")
 	}
 }
 
