--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,3 @@
 systemProp.sonar.host.url=http://localhost:9000
-systemProp.sonar.login=squ_b35bcc288df7b5d920cc3d299712699076ecd41f
+systemProp.sonar.login=sqp_89b7d5736e4caa028111b37e0005ae167562d719
+systemProp.sonar.projectKey=rest-api
