--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.12.RELEASE'
 	id 'java'
 	id 'jacoco'
+	id('org.sonarqube') version '3.4.0.2513'
 }
 
 group = 'co.edu.unisabana'
@@ -18,25 +19,44 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.24'
 	annotationProcessor 'org.projectlombok:lombok:1.18.24'
 	runtimeOnly 'com.h2database:h2:2.1.214'
+	implementation('com.google.guava:guava:31.1-jre')
 
 	testCompileOnly 'org.projectlombok:lombok:1.18.24'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
+
 jacocoTestReport{
-	afterEvaluate {
-		classDirectories.setFrom(files(classDirectories.files.collect {
-			fileTree(dir: it, exclude: [
-					"**/dto/**",
-					"**/model/*",
-					"**/entity/*",
-					"**/exception/*",
-					"co/edu/unisabana/usuario/UsuarioApplication.class",
-					"co/edu/unisabana/usuario/controller/UserController.class",
-					"co/edu/unisabana/usuario/repository/dao/UserDao.class",
-			])
-		}))
+	dependsOn(tasks.test)
+	finalizedBy(tasks.jacocoTestCoverageVerification)
+	classDirectories.setFrom(files(classDirectories.files.collect {
+		fileTree(dir: it, exclude: [
+				"**/dto/**",
+				"**/model/*",
+				"**/entity/*",
+				"**/exception/*",
+				"co/edu/unisabana/usuario/UsuarioApplication.class",
+				"co/edu/unisabana/usuario/controller/UserController.class",
+				"co/edu/unisabana/usuario/repository/dao/UserDao.class",
+		])
+	}))
+}
+
+jacocoTestCoverageVerification {
+	violationRules {
+		rule {
+			classDirectories.setFrom(jacocoTestReport.getAllClassDirs())
+			limit {
+				minimum = 0.9
+			}
+		}
+	}
+}
+
+sonarqube {
+	properties {
+		property("sonar.projectName", "example-rest-api")
 	}
 }
 
