--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ project.tasks["sonarqube"].dependsOn(jacocoTestReport)
 
 sonarqube {
 	properties {
-		property 'sonar.host.url', 'http://localhost:9000'
+		property 'sonar.host.url', 'http://sonarqube:9000'
 	}
 }
 
